<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/kunu_dog_detail_csl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp">

    <TextView
        android:id="@+id/label_nicknames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/kunu_label_nicknames"
        android:textAppearance="@style/KunuStatusBarTextAppearance"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/label_name_en" />

    <ImageView
        android:id="@+id/iv_dog_photo"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/dog_name"
        android:scaleType="centerInside"
        android:src="@drawable/kunu_snow_son"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <EditText
        android:id="@+id/tv_dog_name_cn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/hint_name_cn"
        android:inputType="text"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textAppearance="@style/KunuStatusBarTextAppearance"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_name_cn"
        app:layout_constraintStart_toEndOf="@+id/label_name_cn"
        tools:text="狗狗名字" />

    <EditText
        android:id="@+id/tv_dog_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/hint_type"
        android:inputType="text"
        android:singleLine="true"
        android:textAppearance="@style/KunuStatusBarTextAppearance"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_type"
        app:layout_constraintStart_toEndOf="@+id/label_type"
        tools:text="狗狗體型" />

    <EditText
        android:id="@+id/tv_dog_origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/hint_origin"
        android:inputType="text"
        android:singleLine="true"
        android:textAppearance="@style/KunuStatusBarTextAppearance"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_origin"
        app:layout_constraintStart_toEndOf="@+id/label_origin"
        tools:text="狗狗產地" />

    <EditText
        android:id="@+id/tv_dog_name_en"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/hint_name_en"
        android:inputType="text"
        android:textAppearance="@style/KunuStatusBarTextAppearance"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_name_en"
        app:layout_constraintStart_toEndOf="@+id/label_name_en"
        tools:text="狗狗英文名" />

    <EditText
        android:id="@+id/tv_dog_nicknames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/hint_nicknames"
        android:inputType="text"
        android:textAppearance="@style/KunuStatusBarTextAppearance"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_nicknames"
        app:layout_constraintStart_toEndOf="@+id/label_nicknames"
        tools:text="狗狗別名" />

    <EditText
        android:id="@+id/tv_dog_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/hint_info"
        android:inputType="text"
        android:textAppearance="@style/KunuStatusBarTextAppearance"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:text="狗狗資訊" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <TextView
        android:id="@+id/label_name_en"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/kunu_label_name_en"
        android:textAppearance="@style/KunuStatusBarTextAppearance"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/tv_dog_name_cn" />

    <TextView
        android:id="@+id/label_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/kunu_label_type"
        android:textAppearance="@style/KunuStatusBarTextAppearance"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/label_nicknames" />

    <TextView
        android:id="@+id/label_origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/kunu_label_origin"
        android:textAppearance="@style/KunuStatusBarTextAppearance"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/label_type" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/kunu_label_info"
        android:textAppearance="@style/KunuStatusBarTextAppearance"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/label_origin" />

    <TextView
        android:id="@+id/label_name_cn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/kunu_label_name_cn"
        android:textAppearance="@style/KunuStatusBarTextAppearance"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/iv_dog_photo" />

    <android.support.design.button.MaterialButton
        android:id="@+id/bt_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/update"
        android:onClick="updateDogDetail"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>